# torch-openreml

./: READMD.md  README.md  pyproject.toml
developer_docs/: reml.qmd  reml.tex
docs/: Makefile  ref.bib  reml.qmd  reml.tex
docs/source/: api.rst  change_log.rst  conf.py  index.rst  r_user.rst  vig.rst
my_tests/R/: setup.R  test_1.R  test_3.R
prototypes/: ai_auto_build_v1.py  ai_auto_build_v2.py  ai_auto_build_v3.py  ai_manual_build_v1.py  gradient_v1.py
tests/: test_1.py  test_2.py  test_utils.py
tests/R/: test_1.R  test_2.R  test_3.R
tests/covariance/: test_ar1_matrix.py  test_compound_symmetric_matrix.py  test_diagonal_matrix.py  test_dummy_matrix.py  test_equicorrelation_matrix.py  test_identity_matrix.py  test_matrix.py  test_operator.py  test_operator_block_diagonal.py  test_operator_covariance_propagation.py  test_operator_hadamard_product.py  test_operator_kronecker_product.py  test_operator_sum.py  test_scalar_matrix.py
tests/example_data/: test_example_data.py
torch_openreml/: __init__.py  cov.py  reml.py  utils.py
torch_openreml/cov/: cov.py  covariance_matrix.py
torch_openreml/covariance/: __init__.py  adapter.py  ar1_matrix.py  compound_symmetric_matrix.py  covariance_matrix.py  custom_matrix.py  design_matrix.py  diagonal_matrix.py  dummy_matrix.py  equicorrelation_matrix.py  g_side_covariance.py  identity_matrix.py  lower_triangular_matrix.py  matrix.py  operator.py  operator_block_diagonal.py  operator_covariance_propagation.py  operator_gram.py  operator_hadamard_product.py  operator_kronecker_product.py  operator_sum.py  param.py  (+5 more)
(+31 files in other folders)
